friends-trip/src/styles/app.less
@import "~material-design-icons/iconfont/material-icons.css";

body {
  display: flex;
  flex-direction: column;
  height: 100vh;

  margin: 0;
}

ul {
  margin: 0;
}

.fab-add-transaction {
  position: fixed !important;
  right: 0;
  bottom: 0;
  margin: 25px;
}

.message {
  border: 1px solid lightgray;
  padding: 10px;
}

.form-field > input[type="text"],
.form-field > input[type="password"] {
  width: 200px;
}

.pd-l-10 {
  padding: 10px;
}

.pd-b-10 {
  padding-bottom: 10px;
}

.pd-b-20 {
  padding-bottom: 20px;
}

.details-form-field {
  padding: 10px 0px;
}

.error {
  color: red;
}

.jsgrid-delete-button {
  display: none;
}

#app-log {
  position: absolute;
  width: 100%;
  height: 10%;
  z-index: 100;
  color: red;
  background-color: rgba(220, 220, 220, 0.5);
  display: none;
}

.head-block {
  align-items: center;
  justify-content: space-between;

  box-sizing: border-box;
  padding: 20px;
}

.room-users {
  padding: 0;

  li {
    padding: 10px;
    margin: 5px;
    list-style: none;
    box-shadow: 1px 1px 1px 1px grey;
    cursor: pointer;
  }

  li:hover,
  li:active {
    background-color: rgba(172, 255, 47, 0.2);
  }

  li.selected {
    background-color: rgba(172, 255, 47, 0.5);
  }
}

.btn-logout {
  width: 150px;
  align-self: center;
}

.btn-logout,
#username,
#password {
  font-size: 20px;
}

//FLEX

.fl-col {
  display: flex;
  flex-direction: column;
}

.fl-row {
  display: flex;
  flex-direction: row;
}

.fl-center {
  align-items: center;
}

.fl-end {
  justify-content: flex-end;
}

